logs/macdtrader.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/macdtrader'...
Compiling './lib/python3.5/site-packages/macdtrader/DMA.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (DMA.py, line 58)
Listing './lib/python3.5/site-packages/macdtrader/conf'...
Listing './lib/python3.5/site-packages/macdtrader/cron'...
Compiling './lib/python3.5/site-packages/macdtrader/loadhistoricaldata.py'...
***   File "./lib/python3.5/site-packages/macdtrader/loadhistoricaldata.py", line 24
    print the_page
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/macdtrader/macdgen.py'...
***   File "./lib/python3.5/site-packages/macdtrader/macdgen.py", line 49
    print "taking symbols from command line"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/macdtrader/reportquery.py'...
***   File "./lib/python3.5/site-packages/macdtrader/reportquery.py", line 43
    print "No previous trading day data. Exiting"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/macdtrader/schema'...
Listing './lib/python3.5/site-packages/macdtrader/test'...
Compiling './lib/python3.5/site-packages/macdtrader/tradealert.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tradealert.py, line 35)
Listing './lib/python3.5/site-packages/macdtrader-1.3a0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
